ParChococino.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParChococino.y
-----------------------------------------------------------------------------

state 25 contains 1 shift/reduce conflicts.
state 35 contains 1 shift/reduce conflicts.
state 55 contains 1 shift/reduce conflicts.
state 61 contains 1 reduce/reduce conflicts.
state 63 contains 1 shift/reduce conflicts.
state 107 contains 1 shift/reduce conflicts.
state 128 contains 1 shift/reduce conflicts.
state 129 contains 1 shift/reduce conflicts.
state 146 contains 1 shift/reduce conflicts.

rule 41 is unused
rule 42 is unused
rule 43 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Type Ident '(' ListArg ')' Block         (5)
	ListTopDef -> TopDef                               (6)
	ListTopDef -> TopDef ListTopDef                    (7)
	Arg -> Type Ident                                  (8)
	Arg -> Type '&' Ident                              (9)
	ListArg ->                                         (10)
	ListArg -> Arg                                     (11)
	ListArg -> Arg ',' ListArg                         (12)
	Block -> '{' ListStmt '}'                          (13)
	ListStmt ->                                        (14)
	ListStmt -> Stmt ListStmt                          (15)
	Stmt -> ';'                                        (16)
	Stmt -> Block                                      (17)
	Stmt -> Type ListItem ';'                          (18)
	Stmt -> Type Ident '[' Expr ']'                    (19)
	Stmt -> Ident '=' Expr ';'                         (20)
	Stmt -> Ident '[' Expr ']' '=' Expr                (21)
	Stmt -> TupL '=' TupR                              (22)
	Stmt -> Ident '++' ';'                             (23)
	Stmt -> Ident '--' ';'                             (24)
	Stmt -> 'return' Expr ';'                          (25)
	Stmt -> 'return' ';'                               (26)
	Stmt -> 'if' '(' Expr ')' Stmt                     (27)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (28)
	Stmt -> 'while' '(' Expr ')' Stmt                  (29)
	Stmt -> Expr ';'                                   (30)
	Stmt -> 'break'                                    (31)
	Stmt -> 'continue'                                 (32)
	Item -> Ident                                      (33)
	Item -> Ident '=' Expr                             (34)
	ListItem -> Item                                   (35)
	ListItem -> Item ',' ListItem                      (36)
	Type -> 'int'                                      (37)
	Type -> 'string'                                   (38)
	Type -> 'boolean'                                  (39)
	Type -> 'void'                                     (40)
	ListType ->                                        (41)
	ListType -> Type                                   (42)
	ListType -> Type ',' ListType                      (43)
	Expr6 -> Ident                                     (44)
	Expr6 -> Integer                                   (45)
	Expr6 -> 'true'                                    (46)
	Expr6 -> 'false'                                   (47)
	Expr6 -> Ident '(' ListExpr ')'                    (48)
	Expr6 -> String                                    (49)
	Expr6 -> Ident '[' Expr ']'                        (50)
	Expr6 -> '(' Expr ')'                              (51)
	Expr5 -> '-' Expr6                                 (52)
	Expr5 -> '!' Expr6                                 (53)
	Expr5 -> Expr6                                     (54)
	Expr4 -> Expr4 MulOp Expr5                         (55)
	Expr4 -> Expr5                                     (56)
	Expr3 -> Expr3 AddOp Expr4                         (57)
	Expr3 -> Expr4                                     (58)
	Expr2 -> Expr2 RelOp Expr3                         (59)
	Expr2 -> Expr3                                     (60)
	Expr1 -> Expr2 '&&' Expr1                          (61)
	Expr1 -> Expr2                                     (62)
	Expr -> Expr1 '||' Expr                            (63)
	Expr -> Expr1                                      (64)
	ListExpr ->                                        (65)
	ListExpr -> Expr                                   (66)
	ListExpr -> Expr ',' ListExpr                      (67)
	TupL1 -> Ident                                     (68)
	TupL1 -> '(' TupL ')'                              (69)
	TupL -> '(' ListTupL ')'                           (70)
	TupL -> TupL1                                      (71)
	ListTupL ->                                        (72)
	ListTupL -> TupL                                   (73)
	ListTupL -> TupL ',' ListTupL                      (74)
	TupR1 -> Expr                                      (75)
	TupR1 -> '(' TupR ')'                              (76)
	TupR -> '(' ListTupR ')'                           (77)
	TupR -> TupR1                                      (78)
	ListTupR ->                                        (79)
	ListTupR -> TupR                                   (80)
	ListTupR -> TupR ',' ListTupR                      (81)
	AddOp -> '+'                                       (82)
	AddOp -> '-'                                       (83)
	MulOp -> '*'                                       (84)
	MulOp -> '/'                                       (85)
	MulOp -> '%'                                       (86)
	RelOp -> '<'                                       (87)
	RelOp -> '<='                                      (88)
	RelOp -> '>'                                       (89)
	RelOp -> '>='                                      (90)
	RelOp -> '=='                                      (91)
	RelOp -> '!='                                      (92)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	';'            { PT _ (TS _ 15) }
	'<'            { PT _ (TS _ 16) }
	'<='           { PT _ (TS _ 17) }
	'='            { PT _ (TS _ 18) }
	'=='           { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'['            { PT _ (TS _ 22) }
	']'            { PT _ (TS _ 23) }
	'boolean'      { PT _ (TS _ 24) }
	'break'        { PT _ (TS _ 25) }
	'continue'     { PT _ (TS _ 26) }
	'else'         { PT _ (TS _ 27) }
	'false'        { PT _ (TS _ 28) }
	'if'           { PT _ (TS _ 29) }
	'int'          { PT _ (TS _ 30) }
	'return'       { PT _ (TS _ 31) }
	'string'       { PT _ (TS _ 32) }
	'true'         { PT _ (TS _ 33) }
	'void'         { PT _ (TS _ 34) }
	'while'        { PT _ (TS _ 35) }
	'{'            { PT _ (TS _ 36) }
	'||'           { PT _ (TS _ 37) }
	'}'            { PT _ (TS _ 38) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rule  5
	ListTopDef      rules 6, 7
	Arg             rules 8, 9
	ListArg         rules 10, 11, 12
	Block           rule  13
	ListStmt        rules 14, 15
	Stmt            rules 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32
	Item            rules 33, 34
	ListItem        rules 35, 36
	Type            rules 37, 38, 39, 40
	ListType        rules 41, 42, 43
	Expr6           rules 44, 45, 46, 47, 48, 49, 50, 51
	Expr5           rules 52, 53, 54
	Expr4           rules 55, 56
	Expr3           rules 57, 58
	Expr2           rules 59, 60
	Expr1           rules 61, 62
	Expr            rules 63, 64
	ListExpr        rules 65, 66, 67
	TupL1           rules 68, 69
	TupL            rules 70, 71
	ListTupL        rules 72, 73, 74
	TupR1           rules 75, 76
	TupR            rules 77, 78
	ListTupR        rules 79, 80, 81
	AddOp           rules 82, 83
	MulOp           rules 84, 85, 86
	RelOp           rules 87, 88, 89, 90, 91, 92

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Program        goto state 3
	TopDef         goto state 4
	ListTopDef     goto state 5
	Type           goto state 6

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!'            reduce using rule 1
	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'boolean'      reduce using rule 1
	'break'        reduce using rule 1
	'continue'     reduce using rule 1
	'else'         reduce using rule 1
	'false'        reduce using rule 1
	'if'           reduce using rule 1
	'int'          reduce using rule 1
	'return'       reduce using rule 1
	'string'       reduce using rule 1
	'true'         reduce using rule 1
	'void'         reduce using rule 1
	'while'        reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	'}'            reduce using rule 1
	L_Ident        reduce using rule 1
	L_integ        reduce using rule 1
	L_quoted       reduce using rule 1


State 3

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 4

	ListTopDef -> TopDef .                              (rule 6)
	ListTopDef -> TopDef . ListTopDef                   (rule 7)

	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10
	%eof           reduce using rule 6

	TopDef         goto state 4
	ListTopDef     goto state 12
	Type           goto state 6

State 5

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 6

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 5)

	L_Ident        shift, and enter state 2

	Ident          goto state 11

State 7

	Type -> 'boolean' .                                 (rule 39)

	'&'            reduce using rule 39
	L_Ident        reduce using rule 39


State 8

	Type -> 'int' .                                     (rule 37)

	'&'            reduce using rule 37
	L_Ident        reduce using rule 37


State 9

	Type -> 'string' .                                  (rule 38)

	'&'            reduce using rule 38
	L_Ident        reduce using rule 38


State 10

	Type -> 'void' .                                    (rule 40)

	'&'            reduce using rule 40
	L_Ident        reduce using rule 40


State 11

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 5)

	'('            shift, and enter state 13


State 12

	ListTopDef -> TopDef ListTopDef .                   (rule 7)

	%eof           reduce using rule 7


State 13

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 5)

	')'            reduce using rule 10
	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Arg            goto state 14
	ListArg        goto state 15
	Type           goto state 16

State 14

	ListArg -> Arg .                                    (rule 11)
	ListArg -> Arg . ',' ListArg                        (rule 12)

	')'            reduce using rule 11
	','            shift, and enter state 20


State 15

	TopDef -> Type Ident '(' ListArg . ')' Block        (rule 5)

	')'            shift, and enter state 19


State 16

	Arg -> Type . Ident                                 (rule 8)
	Arg -> Type . '&' Ident                             (rule 9)

	'&'            shift, and enter state 18
	L_Ident        shift, and enter state 2

	Ident          goto state 17

State 17

	Arg -> Type Ident .                                 (rule 8)

	')'            reduce using rule 8
	','            reduce using rule 8


State 18

	Arg -> Type '&' . Ident                             (rule 9)

	L_Ident        shift, and enter state 2

	Ident          goto state 24

State 19

	TopDef -> Type Ident '(' ListArg ')' . Block        (rule 5)

	'{'            shift, and enter state 23

	Block          goto state 22

State 20

	ListArg -> Arg ',' . ListArg                        (rule 12)

	')'            reduce using rule 10
	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Arg            goto state 14
	ListArg        goto state 21
	Type           goto state 16

State 21

	ListArg -> Arg ',' ListArg .                        (rule 12)

	')'            reduce using rule 12


State 22

	TopDef -> Type Ident '(' ListArg ')' Block .        (rule 5)

	'boolean'      reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	'void'         reduce using rule 5
	%eof           reduce using rule 5


State 23

	Block -> '{' . ListStmt '}'                         (rule 13)

	'!'            shift, and enter state 41
	'('            shift, and enter state 42
	'-'            shift, and enter state 43
	';'            shift, and enter state 44
	'boolean'      shift, and enter state 7
	'break'        shift, and enter state 45
	'continue'     shift, and enter state 46
	'false'        shift, and enter state 47
	'if'           shift, and enter state 48
	'int'          shift, and enter state 8
	'return'       shift, and enter state 49
	'string'       shift, and enter state 9
	'true'         shift, and enter state 50
	'void'         shift, and enter state 10
	'while'        shift, and enter state 51
	'{'            shift, and enter state 23
	'}'            reduce using rule 14
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 52
	L_quoted       shift, and enter state 53

	Ident          goto state 25
	Integer        goto state 26
	String         goto state 27
	Block          goto state 28
	ListStmt       goto state 29
	Stmt           goto state 30
	Type           goto state 31
	Expr6          goto state 32
	Expr5          goto state 33
	Expr4          goto state 34
	Expr3          goto state 35
	Expr2          goto state 36
	Expr1          goto state 37
	Expr           goto state 38
	TupL1          goto state 39
	TupL           goto state 40

State 24

	Arg -> Type '&' Ident .                             (rule 9)

	')'            reduce using rule 9
	','            reduce using rule 9


State 25

	Stmt -> Ident . '=' Expr ';'                        (rule 20)
	Stmt -> Ident . '[' Expr ']' '=' Expr               (rule 21)
	Stmt -> Ident . '++' ';'                            (rule 23)
	Stmt -> Ident . '--' ';'                            (rule 24)
	Expr6 -> Ident .                                    (rule 44)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 48)
	Expr6 -> Ident . '[' Expr ']'                       (rule 50)
	TupL1 -> Ident .                                    (rule 68)

	'!='           reduce using rule 44
	'%'            reduce using rule 44
	'&&'           reduce using rule 44
	'('            shift, and enter state 89
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	'++'           shift, and enter state 90
	'-'            reduce using rule 44
	'--'           shift, and enter state 91
	'/'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'='            shift, and enter state 92
			(reduce using rule 68)

	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'['            shift, and enter state 93
	'||'           reduce using rule 44


State 26

	Expr6 -> Integer .                                  (rule 45)

	'!'            reduce using rule 45
	'!='           reduce using rule 45
	'%'            reduce using rule 45
	'&&'           reduce using rule 45
	'('            reduce using rule 45
	')'            reduce using rule 45
	'*'            reduce using rule 45
	'+'            reduce using rule 45
	','            reduce using rule 45
	'-'            reduce using rule 45
	'/'            reduce using rule 45
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'=='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	']'            reduce using rule 45
	'boolean'      reduce using rule 45
	'break'        reduce using rule 45
	'continue'     reduce using rule 45
	'else'         reduce using rule 45
	'false'        reduce using rule 45
	'if'           reduce using rule 45
	'int'          reduce using rule 45
	'return'       reduce using rule 45
	'string'       reduce using rule 45
	'true'         reduce using rule 45
	'void'         reduce using rule 45
	'while'        reduce using rule 45
	'{'            reduce using rule 45
	'||'           reduce using rule 45
	'}'            reduce using rule 45
	L_Ident        reduce using rule 45
	L_integ        reduce using rule 45
	L_quoted       reduce using rule 45


State 27

	Expr6 -> String .                                   (rule 49)

	'!'            reduce using rule 49
	'!='           reduce using rule 49
	'%'            reduce using rule 49
	'&&'           reduce using rule 49
	'('            reduce using rule 49
	')'            reduce using rule 49
	'*'            reduce using rule 49
	'+'            reduce using rule 49
	','            reduce using rule 49
	'-'            reduce using rule 49
	'/'            reduce using rule 49
	';'            reduce using rule 49
	'<'            reduce using rule 49
	'<='           reduce using rule 49
	'=='           reduce using rule 49
	'>'            reduce using rule 49
	'>='           reduce using rule 49
	']'            reduce using rule 49
	'boolean'      reduce using rule 49
	'break'        reduce using rule 49
	'continue'     reduce using rule 49
	'else'         reduce using rule 49
	'false'        reduce using rule 49
	'if'           reduce using rule 49
	'int'          reduce using rule 49
	'return'       reduce using rule 49
	'string'       reduce using rule 49
	'true'         reduce using rule 49
	'void'         reduce using rule 49
	'while'        reduce using rule 49
	'{'            reduce using rule 49
	'||'           reduce using rule 49
	'}'            reduce using rule 49
	L_Ident        reduce using rule 49
	L_integ        reduce using rule 49
	L_quoted       reduce using rule 49


State 28

	Stmt -> Block .                                     (rule 17)

	'!'            reduce using rule 17
	'('            reduce using rule 17
	'-'            reduce using rule 17
	';'            reduce using rule 17
	'boolean'      reduce using rule 17
	'break'        reduce using rule 17
	'continue'     reduce using rule 17
	'else'         reduce using rule 17
	'false'        reduce using rule 17
	'if'           reduce using rule 17
	'int'          reduce using rule 17
	'return'       reduce using rule 17
	'string'       reduce using rule 17
	'true'         reduce using rule 17
	'void'         reduce using rule 17
	'while'        reduce using rule 17
	'{'            reduce using rule 17
	'}'            reduce using rule 17
	L_Ident        reduce using rule 17
	L_integ        reduce using rule 17
	L_quoted       reduce using rule 17


State 29

	Block -> '{' ListStmt . '}'                         (rule 13)

	'}'            shift, and enter state 88


State 30

	ListStmt -> Stmt . ListStmt                         (rule 15)

	'!'            shift, and enter state 41
	'('            shift, and enter state 42
	'-'            shift, and enter state 43
	';'            shift, and enter state 44
	'boolean'      shift, and enter state 7
	'break'        shift, and enter state 45
	'continue'     shift, and enter state 46
	'false'        shift, and enter state 47
	'if'           shift, and enter state 48
	'int'          shift, and enter state 8
	'return'       shift, and enter state 49
	'string'       shift, and enter state 9
	'true'         shift, and enter state 50
	'void'         shift, and enter state 10
	'while'        shift, and enter state 51
	'{'            shift, and enter state 23
	'}'            reduce using rule 14
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 52
	L_quoted       shift, and enter state 53

	Ident          goto state 25
	Integer        goto state 26
	String         goto state 27
	Block          goto state 28
	ListStmt       goto state 87
	Stmt           goto state 30
	Type           goto state 31
	Expr6          goto state 32
	Expr5          goto state 33
	Expr4          goto state 34
	Expr3          goto state 35
	Expr2          goto state 36
	Expr1          goto state 37
	Expr           goto state 38
	TupL1          goto state 39
	TupL           goto state 40

State 31

	Stmt -> Type . ListItem ';'                         (rule 18)
	Stmt -> Type . Ident '[' Expr ']'                   (rule 19)

	L_Ident        shift, and enter state 2

	Ident          goto state 84
	Item           goto state 85
	ListItem       goto state 86

State 32

	Expr5 -> Expr6 .                                    (rule 54)

	'!'            reduce using rule 54
	'!='           reduce using rule 54
	'%'            reduce using rule 54
	'&&'           reduce using rule 54
	'('            reduce using rule 54
	')'            reduce using rule 54
	'*'            reduce using rule 54
	'+'            reduce using rule 54
	','            reduce using rule 54
	'-'            reduce using rule 54
	'/'            reduce using rule 54
	';'            reduce using rule 54
	'<'            reduce using rule 54
	'<='           reduce using rule 54
	'=='           reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	']'            reduce using rule 54
	'boolean'      reduce using rule 54
	'break'        reduce using rule 54
	'continue'     reduce using rule 54
	'else'         reduce using rule 54
	'false'        reduce using rule 54
	'if'           reduce using rule 54
	'int'          reduce using rule 54
	'return'       reduce using rule 54
	'string'       reduce using rule 54
	'true'         reduce using rule 54
	'void'         reduce using rule 54
	'while'        reduce using rule 54
	'{'            reduce using rule 54
	'||'           reduce using rule 54
	'}'            reduce using rule 54
	L_Ident        reduce using rule 54
	L_integ        reduce using rule 54
	L_quoted       reduce using rule 54


State 33

	Expr4 -> Expr5 .                                    (rule 56)

	'!'            reduce using rule 56
	'!='           reduce using rule 56
	'%'            reduce using rule 56
	'&&'           reduce using rule 56
	'('            reduce using rule 56
	')'            reduce using rule 56
	'*'            reduce using rule 56
	'+'            reduce using rule 56
	','            reduce using rule 56
	'-'            reduce using rule 56
	'/'            reduce using rule 56
	';'            reduce using rule 56
	'<'            reduce using rule 56
	'<='           reduce using rule 56
	'=='           reduce using rule 56
	'>'            reduce using rule 56
	'>='           reduce using rule 56
	']'            reduce using rule 56
	'boolean'      reduce using rule 56
	'break'        reduce using rule 56
	'continue'     reduce using rule 56
	'else'         reduce using rule 56
	'false'        reduce using rule 56
	'if'           reduce using rule 56
	'int'          reduce using rule 56
	'return'       reduce using rule 56
	'string'       reduce using rule 56
	'true'         reduce using rule 56
	'void'         reduce using rule 56
	'while'        reduce using rule 56
	'{'            reduce using rule 56
	'||'           reduce using rule 56
	'}'            reduce using rule 56
	L_Ident        reduce using rule 56
	L_integ        reduce using rule 56
	L_quoted       reduce using rule 56


State 34

	Expr4 -> Expr4 . MulOp Expr5                        (rule 55)
	Expr3 -> Expr4 .                                    (rule 58)

	'!'            reduce using rule 58
	'!='           reduce using rule 58
	'%'            shift, and enter state 81
	'&&'           reduce using rule 58
	'('            reduce using rule 58
	')'            reduce using rule 58
	'*'            shift, and enter state 82
	'+'            reduce using rule 58
	','            reduce using rule 58
	'-'            reduce using rule 58
	'/'            shift, and enter state 83
	';'            reduce using rule 58
	'<'            reduce using rule 58
	'<='           reduce using rule 58
	'=='           reduce using rule 58
	'>'            reduce using rule 58
	'>='           reduce using rule 58
	']'            reduce using rule 58
	'boolean'      reduce using rule 58
	'break'        reduce using rule 58
	'continue'     reduce using rule 58
	'else'         reduce using rule 58
	'false'        reduce using rule 58
	'if'           reduce using rule 58
	'int'          reduce using rule 58
	'return'       reduce using rule 58
	'string'       reduce using rule 58
	'true'         reduce using rule 58
	'void'         reduce using rule 58
	'while'        reduce using rule 58
	'{'            reduce using rule 58
	'||'           reduce using rule 58
	'}'            reduce using rule 58
	L_Ident        reduce using rule 58
	L_integ        reduce using rule 58
	L_quoted       reduce using rule 58

	MulOp          goto state 80

State 35

	Expr3 -> Expr3 . AddOp Expr4                        (rule 57)
	Expr2 -> Expr3 .                                    (rule 60)

	'!'            reduce using rule 60
	'!='           reduce using rule 60
	'&&'           reduce using rule 60
	'('            reduce using rule 60
	')'            reduce using rule 60
	'+'            shift, and enter state 78
	','            reduce using rule 60
	'-'            shift, and enter state 79
			(reduce using rule 60)

	';'            reduce using rule 60
	'<'            reduce using rule 60
	'<='           reduce using rule 60
	'=='           reduce using rule 60
	'>'            reduce using rule 60
	'>='           reduce using rule 60
	']'            reduce using rule 60
	'boolean'      reduce using rule 60
	'break'        reduce using rule 60
	'continue'     reduce using rule 60
	'else'         reduce using rule 60
	'false'        reduce using rule 60
	'if'           reduce using rule 60
	'int'          reduce using rule 60
	'return'       reduce using rule 60
	'string'       reduce using rule 60
	'true'         reduce using rule 60
	'void'         reduce using rule 60
	'while'        reduce using rule 60
	'{'            reduce using rule 60
	'||'           reduce using rule 60
	'}'            reduce using rule 60
	L_Ident        reduce using rule 60
	L_integ        reduce using rule 60
	L_quoted       reduce using rule 60

	AddOp          goto state 77

State 36

	Expr2 -> Expr2 . RelOp Expr3                        (rule 59)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 61)
	Expr1 -> Expr2 .                                    (rule 62)

	'!'            reduce using rule 62
	'!='           shift, and enter state 70
	'&&'           shift, and enter state 71
	'('            reduce using rule 62
	')'            reduce using rule 62
	','            reduce using rule 62
	'-'            reduce using rule 62
	';'            reduce using rule 62
	'<'            shift, and enter state 72
	'<='           shift, and enter state 73
	'=='           shift, and enter state 74
	'>'            shift, and enter state 75
	'>='           shift, and enter state 76
	']'            reduce using rule 62
	'boolean'      reduce using rule 62
	'break'        reduce using rule 62
	'continue'     reduce using rule 62
	'else'         reduce using rule 62
	'false'        reduce using rule 62
	'if'           reduce using rule 62
	'int'          reduce using rule 62
	'return'       reduce using rule 62
	'string'       reduce using rule 62
	'true'         reduce using rule 62
	'void'         reduce using rule 62
	'while'        reduce using rule 62
	'{'            reduce using rule 62
	'||'           reduce using rule 62
	'}'            reduce using rule 62
	L_Ident        reduce using rule 62
	L_integ        reduce using rule 62
	L_quoted       reduce using rule 62

	RelOp          goto state 69

State 37

	Expr -> Expr1 . '||' Expr                           (rule 63)
	Expr -> Expr1 .                                     (rule 64)

	'!'            reduce using rule 64
	'('            reduce using rule 64
	')'            reduce using rule 64
	','            reduce using rule 64
	'-'            reduce using rule 64
	';'            reduce using rule 64
	']'            reduce using rule 64
	'boolean'      reduce using rule 64
	'break'        reduce using rule 64
	'continue'     reduce using rule 64
	'else'         reduce using rule 64
	'false'        reduce using rule 64
	'if'           reduce using rule 64
	'int'          reduce using rule 64
	'return'       reduce using rule 64
	'string'       reduce using rule 64
	'true'         reduce using rule 64
	'void'         reduce using rule 64
	'while'        reduce using rule 64
	'{'            reduce using rule 64
	'||'           shift, and enter state 68
	'}'            reduce using rule 64
	L_Ident        reduce using rule 64
	L_integ        reduce using rule 64
	L_quoted       reduce using rule 64


State 38

	Stmt -> Expr . ';'                                  (rule 30)

	';'            shift, and enter state 67


State 39

	TupL -> TupL1 .                                     (rule 71)

	')'            reduce using rule 71
	','            reduce using rule 71
	'='            reduce using rule 71


State 40

	Stmt -> TupL . '=' TupR                             (rule 22)

	'='            shift, and enter state 66


State 41

	Expr5 -> '!' . Expr6                                (rule 53)

	'('            shift, and enter state 57
	'false'        shift, and enter state 47
	'true'         shift, and enter state 50
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 52
	L_quoted       shift, and enter state 53

	Ident          goto state 55
	Integer        goto state 26
	String         goto state 27
	Expr6          goto state 65

State 42

	Expr6 -> '(' . Expr ')'                             (rule 51)
	TupL1 -> '(' . TupL ')'                             (rule 69)
	TupL -> '(' . ListTupL ')'                          (rule 70)

	'!'            shift, and enter state 41
	'('            shift, and enter state 42
	')'            reduce using rule 72
	'-'            shift, and enter state 43
	'false'        shift, and enter state 47
	'true'         shift, and enter state 50
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 52
	L_quoted       shift, and enter state 53

	Ident          goto state 61
	Integer        goto state 26
	String         goto state 27
	Expr6          goto state 32
	Expr5          goto state 33
	Expr4          goto state 34
	Expr3          goto state 35
	Expr2          goto state 36
	Expr1          goto state 37
	Expr           goto state 62
	TupL1          goto state 39
	TupL           goto state 63
	ListTupL       goto state 64

State 43

	Expr5 -> '-' . Expr6                                (rule 52)

	'('            shift, and enter state 57
	'false'        shift, and enter state 47
	'true'         shift, and enter state 50
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 52
	L_quoted       shift, and enter state 53

	Ident          goto state 55
	Integer        goto state 26
	String         goto state 27
	Expr6          goto state 60

State 44

	Stmt -> ';' .                                       (rule 16)

	'!'            reduce using rule 16
	'('            reduce using rule 16
	'-'            reduce using rule 16
	';'            reduce using rule 16
	'boolean'      reduce using rule 16
	'break'        reduce using rule 16
	'continue'     reduce using rule 16
	'else'         reduce using rule 16
	'false'        reduce using rule 16
	'if'           reduce using rule 16
	'int'          reduce using rule 16
	'return'       reduce using rule 16
	'string'       reduce using rule 16
	'true'         reduce using rule 16
	'void'         reduce using rule 16
	'while'        reduce using rule 16
	'{'            reduce using rule 16
	'}'            reduce using rule 16
	L_Ident        reduce using rule 16
	L_integ        reduce using rule 16
	L_quoted       reduce using rule 16


State 45

	Stmt -> 'break' .                                   (rule 31)

	'!'            reduce using rule 31
	'('            reduce using rule 31
	'-'            reduce using rule 31
	';'            reduce using rule 31
	'boolean'      reduce using rule 31
	'break'        reduce using rule 31
	'continue'     reduce using rule 31
	'else'         reduce using rule 31
	'false'        reduce using rule 31
	'if'           reduce using rule 31
	'int'          reduce using rule 31
	'return'       reduce using rule 31
	'string'       reduce using rule 31
	'true'         reduce using rule 31
	'void'         reduce using rule 31
	'while'        reduce using rule 31
	'{'            reduce using rule 31
	'}'            reduce using rule 31
	L_Ident        reduce using rule 31
	L_integ        reduce using rule 31
	L_quoted       reduce using rule 31


State 46

	Stmt -> 'continue' .                                (rule 32)

	'!'            reduce using rule 32
	'('            reduce using rule 32
	'-'            reduce using rule 32
	';'            reduce using rule 32
	'boolean'      reduce using rule 32
	'break'        reduce using rule 32
	'continue'     reduce using rule 32
	'else'         reduce using rule 32
	'false'        reduce using rule 32
	'if'           reduce using rule 32
	'int'          reduce using rule 32
	'return'       reduce using rule 32
	'string'       reduce using rule 32
	'true'         reduce using rule 32
	'void'         reduce using rule 32
	'while'        reduce using rule 32
	'{'            reduce using rule 32
	'}'            reduce using rule 32
	L_Ident        reduce using rule 32
	L_integ        reduce using rule 32
	L_quoted       reduce using rule 32


State 47

	Expr6 -> 'false' .                                  (rule 47)

	'!'            reduce using rule 47
	'!='           reduce using rule 47
	'%'            reduce using rule 47
	'&&'           reduce using rule 47
	'('            reduce using rule 47
	')'            reduce using rule 47
	'*'            reduce using rule 47
	'+'            reduce using rule 47
	','            reduce using rule 47
	'-'            reduce using rule 47
	'/'            reduce using rule 47
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	']'            reduce using rule 47
	'boolean'      reduce using rule 47
	'break'        reduce using rule 47
	'continue'     reduce using rule 47
	'else'         reduce using rule 47
	'false'        reduce using rule 47
	'if'           reduce using rule 47
	'int'          reduce using rule 47
	'return'       reduce using rule 47
	'string'       reduce using rule 47
	'true'         reduce using rule 47
	'void'         reduce using rule 47
	'while'        reduce using rule 47
	'{'            reduce using rule 47
	'||'           reduce using rule 47
	'}'            reduce using rule 47
	L_Ident        reduce using rule 47
	L_integ        reduce using rule 47
	L_quoted       reduce using rule 47


State 48

	Stmt -> 'if' . '(' Expr ')' Stmt                    (rule 27)
	Stmt -> 'if' . '(' Expr ')' Stmt 'else' Stmt        (rule 28)

	'('            shift, and enter state 59


State 49

	Stmt -> 'return' . Expr ';'                         (rule 25)
	Stmt -> 'return' . ';'                              (rule 26)
